[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUI/Component/MailLign.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/BaseTheme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.490196 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="MailLign" type="Button"]
margin_right = 1920.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 100 )
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 90.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FromLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 119.0
margin_bottom = 75.0
mouse_filter = 1
text = "From"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 123.0
margin_right = 855.0
margin_bottom = 80.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="SubjectLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 859.0
margin_top = 4.0
margin_right = 1047.0
margin_bottom = 75.0
mouse_filter = 1
text = "Subject"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 1051.0
margin_right = 1783.0
margin_bottom = 80.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="DateLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 1787.0
margin_top = 4.0
margin_right = 1900.0
margin_bottom = 75.0
mouse_filter = 1
text = "Date"
